Using JS Modules

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
                 <div class="col-12 col-md-3 text-light">
                     <strong class="text-light" id="temp">-</strong><sup class="text-light">F</sup> Indianapolis
                 </div>
-                <div class="col-12 col-md-3 text-light">
-                    Tuesday, March 29, 2022
-                </div>
+                <div class="col-12 col-md-3 text-light" id="cur-date"></div>
                 <div class="col-0 col-md-4 text-light">
 
                 </div>
@@ -123,73 +121,7 @@
     </section>
 
     <script>
-        var newsData = "";
-        var url = new URL('https://free-news.p.rapidapi.com/v1/search');
-        var params = { q: 'energy, solar, world, electricity, wind', lang: 'en' };
-        url.search = new URLSearchParams(params).toString();
 
-        fetch(url, {
-            "method": "GET",
-            "headers": {
-                'x-rapidapi-host': 'free-news.p.rapidapi.com',
-                'x-rapidapi-key': '29b165ef87msh7c35f1e9599cea9p1efc23jsne9fe624941c6'
-            }
-        })
-            .then(response => response.json())
-            .then(data => {
-                debugger;
-                newsData = data.articles;
-                const featured_main_published_date = new Date(newsData[0].published_date).toLocaleDateString('en-us', { weekday: "long", year: "numeric", month: "short", day: "numeric" });
-
-                setBackground('#featured-main-wrapper', newsData[0].media);
-                setElement('#featured-main-topic', newsData[0].topic);
-
-                setElement('#featured-main-topic', newsData[0].topic);
-                setElement('#featured-main', newsData[0].title);
-                setElement('#featured-main-date', featured_main_published_date);
-                setElement('#featured-main-clean-url', newsData[0].clean_url);
-
-                setBackground('#featured-main-small-wrapper', newsData[1].media);
-                setElement('#featured-main-small-topic', newsData[1].topic);
-                setElement('#featured-main-small', newsData[1].title);
-
-                setBackground('#featured-small-left-wrapper', newsData[2].media);
-                setElement('#featured-small-left-topic', newsData[2].topic);
-                setElement('#featured-small-left', newsData[2].title);
-
-                setBackground('#featured-small-right-wrapper', newsData[3].media);
-                setElement('#featured-small-right-topic', newsData[3].topic);
-                setElement('#featured-small-right', newsData[3].title);
-
-                loadLatestArticles();
-                let html = "";
-                console.log('First Article', newsData[0]);
-                /*data.articles.map( el => {
-                    html += `<div class="card" style="display:flex;">
-                                <div style="width: 100px; height:100px;">
-                                    <img src="${el.media}" alt="" style="with:100%; height:100%;" >
-                                </div>
-                                <div>
-                                    <h3>${el.title}</h3>
-                                    <div>${el.author}</div>
-                                    <div>${el.summary}</div>
-                                </div>
-                             </div>`;
-                    //console.log('data', el);
-                });*/
-                //document.querySelector("#featured-main").innerHTML = html;
-            });
-        function setElement(element, value) {
-            document.querySelector(element).innerHTML = value;
-        }
-
-        function setBackground(element, value) {
-            document.querySelector(element).style.background = `url(${value}) no-repeat`;
-        }
-
-        function setImgSrc(element, value) {
-            document.querySelector(element).src = value;
-        }
     </script>
     <div class="container">
         <div class="row">
@@ -235,20 +167,6 @@
                         </div>
                     </div>
                 </div>
-
-                <script>
-                    function loadLatestArticles() {
-                        setImgSrc('#latest-featured-1-img', newsData[4].media);
-                        setElement('#latest-featured-1-title', newsData[4].title);
-                        setElement('#latest-featured-1-author', newsData[4].rights);
-                        setElement('#latest-featured-1-summary', `${newsData[4].summary.substring(0, 150)}...`);
-
-                        setImgSrc('#latest-featured-2-img', newsData[5].media);
-                        setElement('#latest-featured-2-title', newsData[5].title);
-                        setElement('#latest-featured-2-author', newsData[5].rights);
-                        setElement('#latest-featured-2-summary', `${newsData[5].summary.substring(0, 150)}...`);
-                    }
-                </script>
             </div>
             <div class="col-12 col-sm-6 col-md-4 mt-3">
 
@@ -294,16 +212,15 @@
                     <div class="col-12 col-md py-4">
                         <span class="mx-2">Planet and Energy 2022</span>
                         <span class="mx-2">All Rights Reserved</span>
-                        <span class="mx-2">Website Powered by <a href="https://www.marketpath.com/" target="_blank"
-                                title="Marketpath CMS">Marketpath CMS</a></span>
+                        <!-- <span class="mx-2">Website Powered by <a href="https://www.marketpath.com/" target="_blank"
+                                title="Marketpath CMS">Marketpath CMS</a></span> -->
                     </div>
                 </div>
             </div>
         </div>
     </footer>
 
-    <script src="./js/_weather.js"></script>
-
+    <script type="module" src="/js/_main.js"></script>
     <!-- Logo image credits -->
     <!--<a href='https://www.freepik.com/vectors/business'>Business vector created by macrovector - www.freepik.com</a>-->
 </body>
