Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="./css/bootstrap-5.0.2.min.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/theme.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3TSS5W9E9J"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-3TSS5W9E9J');
+    </script>
 </head>
 
 <body class="h-100">
@@ -197,13 +206,7 @@
             </div>
             <div class="col-12 col-md-9 ps-md-5">
                 <div class="row">
-
                     <div class="col-12 col-md-6">
-
-
-
-
-
                         <div class="extended-navigation">
                         </div>
                     </div>
@@ -212,8 +215,8 @@
                     <div class="col-12 col-md py-4">
                         <span class="mx-2">Planet and Energy 2022</span>
                         <span class="mx-2">All Rights Reserved</span>
-                        <!-- <span class="mx-2">Website Powered by <a href="https://www.marketpath.com/" target="_blank"
-                                title="Marketpath CMS">Marketpath CMS</a></span> -->
+                        <span class="mx-2"> <a href="https://www.planetayenergiacom/" target="_blank"
+                                title="Planeta y Energia">Planeta y Energia</a></span>
                     </div>
                 </div>
             </div>
